<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_bg" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_image_view"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            android:layout_marginStart="25dp"
            android:layout_marginTop="150dp"
            android:transitionName="profile_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:transitionName="profile_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile_image"
        app:layout_constraintStart_toEndOf="@id/img_profile_image"
        app:layout_constraintTop_toTopOf="@+id/img_profile_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:tint="#323232"
        android:transitionName="shared_element_transition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_bg"
        app:srcCompat="@drawable/ic_home" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/address"
        android:textSize="20sp"
        android:transitionName="shared_element_transition"
        app:layout_constraintBottom_toBottomOf="@+id/img_home"
        app:layout_constraintStart_toEndOf="@+id/img_home"
        app:layout_constraintTop_toTopOf="@+id/img_home" />

    <View
        android:id="@+id/view_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#323232"
        android:layout_margin="10dp"
        android:transitionName="shared_element_transition"
        app:layout_constraintTop_toBottomOf="@+id/img_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_phone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:tint="#323232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_home"
        app:srcCompat="@drawable/ic_phone_android" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_phone"
        app:layout_constraintStart_toEndOf="@+id/img_phone"
        app:layout_constraintTop_toTopOf="@+id/img_phone" />

    <View
        android:id="@+id/view_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#323232"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/img_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_mail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:tint="#323232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_phone"
        app:srcCompat="@drawable/ic_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/mail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_mail"
        app:layout_constraintStart_toEndOf="@+id/img_mail"
        app:layout_constraintTop_toTopOf="@+id/img_mail" />

    <View
        android:id="@+id/view_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#323232"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/img_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>